splice directory integration
